@@ -23,6 +23,7 @@ JAVA_OPTS="\
 --add-exports java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED \
 --add-exports java.desktop/com.apple.laf=ALL-UNNAMED \
 --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
+--add-opens java.desktop/java.awt.color=ALL-UNNAMED \
 --add-opens java.base/java.net=ALL-UNNAMED"
 
 # Check if the script was passed the -d or --debug argument
